--- a/src/app/account-update/account-update.component.html
+++ b/src/app/account-update/account-update.component.html
@@ -1,35 +1,47 @@
 <h2 class="title" mat-dialog-title>SIGN UP FOR NEXUS</h2>
-<mat-dialog-content class="mat-typography">
-  <div class="signUpContainer">
-    <form [formGroup]="AccountUpdateForm" (ngSubmit)="onSubmit()">
-      <label></label>
-      <input type="text" class="inputBox" placeholder="Username" formControlName="name">
-      <label></label>
-      <input type="email" class="inputBox" placeholder="Email" formControlName="email">
-      <label></label>
-      <input type="password" class="inputBox" placeholder="password" formControlName="password">
-      <label></label>
-      <input type="picture" class="inputBox" placeholder="Profile Picture" formControlName="profilePicture">
-      <label></label>
-      <input type="text" class="inputBox" placeholder="Phone #" formControlName="phoneNumber">
-      <label></label>
-      <input type="text" class="inputBox" placeholder="Location" formControlName="location">
-      <label></label>
-      <input type="text" class="inputBox" placeholder="LinkedIn" formControlName="linkdin">
-      <label></label>
-      <input type="text" class="inputBox" placeholder="FaceBook" formControlName="faceBook">
-      <label></label>
-      <input type="text" class="inputBox" placeholder="Instagram" formControlName="instagram">
-      <label></label>
-      <input type="text" class="inputBox" placeholder="Twitter" formControlName="twitter">
-      <label></label>
-      <input type="options" class="inputBox" placeholder="Skills" formControlName="skills">
-      <label></label>
-      <textarea class="inputBox" placeholder="About You or Your Business" formControlName="about"></textarea>
-    </form>
-  </div>
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button class="buttons" mat-button  type="button" mat-dialog-close>Cancel</button>
-  <button class="buttons" mat-button cdkFocusInitial mat-dialog-close (click)="onSubmit()">Update</button>
-</mat-dialog-actions>
+<form [formGroup]="AccountUpdateForm" (ngSubmit)="submit(AccountUpdateForm)">
+  <mat-dialog-content class="mat-typography">
+    <div class="signUpContainer">
+      <mat-form-field>
+        <input matInput class="inputBox" placeholder="Username" formControlName="name">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="email" class="inputBox" placeholder="Email" formControlName="email">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" class="inputBox" placeholder="password" formControlName="password">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="picture" class="inputBox" placeholder="Profile Picture" formControlName="profilePicture">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Phone #" formControlName="phoneNumber">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Location" formControlName="location">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="LinkedIn" formControlName="linkdin">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="FaceBook" formControlName="faceBook">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Instagram" formControlName="instagram">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Twitter" formControlName="twitter">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="options" class="inputBox" placeholder="Skills" formControlName="skills">
+      </mat-form-field>
+      <mat-form-field>
+        <textarea matInput class="inputBox" placeholder="About You or Your Business" formControlName="about"></textarea>
+      </mat-form-field>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button class="buttons" mat-button type="button" mat-dialog-close>Cancel</button>
+    <button class="buttons" mat-button cdkFocusInitial type="submit">Update</button>
+  </mat-dialog-actions>
+</form>
