--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -13,4 +13,17 @@
   <p>{{ profile?.profilePicture }}</p>
   <button mat-button (click)="openForm()">Update</button>
 </div>
+
+<div *ngFor="let post of posts" id="card">
+    <mat-card>
+      <section id="left-column">
+        <h2>{{ post?.jobTitle }}</h2>
+        <h3>{{ post?.location }}</h3>
+      </section>
+      <section id="right-column">
+        <p> {{ post?.skills }}</p>
+        <p> {{ post?.jobDescription }}</p>
+      </section>
+    </mat-card>
+  </div>
  
