--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -12,6 +12,7 @@
       <section id="left-column">
         <h2>{{ post.jobTitle }}</h2>
         <h3>{{ post.location }}</h3>
+        <h4>{{ post.name }}</h4>
       </section>
       <section id="right-column">
         <p> {{ post.skills }}</p>
