--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,4 +1,4 @@
-@media (min-width: 320px) and (max-width: 780px){
+@media (min-width: 320px) and (max-width: 1023px){
     .landing {
         background-image: url("../../assets/Nexus_Landing_Page_BKG.jpg");
         background-size: 100vw ;
@@ -94,6 +94,7 @@
     height: 100vh;
     width: 100vw;
     margin-top: -.5em;
+    background-repeat: no-repeat;
 }
 
 .button1{
