--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -9,15 +9,16 @@
 
   <div *ngFor="let post of posts" id="card">
     <mat-card>
-      <section id="left-column">
-        <h2>{{ post.jobTitle }}</h2>
-        <h3>{{ post.location }}</h3>
-        <h4>{{ post.name }}</h4>
-      </section>
-      <section id="right-column">
-        <p> {{ post.skills }}</p>
-        <p> {{ post.jobDescription }}</p>
-      </section>
+      <mat-card-title>{{ post.jobTitle }}</mat-card-title>
+      <mat-card-subtitle> {{ post.name }} </mat-card-subtitle>
+      <mat-card-subtitle> {{ post.location }} </mat-card-subtitle>
+      <mat-card-content> {{post.skills}} </mat-card-content>
+      <mat-card-content> {{post.jobDescription}} </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>More Info</button>
+        <!-- <button mat-icon-button><img src="../../assets/telephone.svg"></button>
+        <button mat-icon-button><img src="../../assets/mail.svg"></button> -->
+      </mat-card-actions>
     </mat-card>
   </div>
 
