--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
       <a class="Home" routerLink="/landing">HOME</a>
       <a class="AboutUs" href="http://localhost:4200/landing#aboutSect">ABOUT US</a>
       <a class="Jobs" routerLink="/posts">JOBS</a>
-      <a class="Account" routerLink="/account">ACCOUNT</a>
+      <a class="Account" (click)="handleAccount()">ACCOUNT</a>
     </ul>
     
   </nav>
