--- a/src/app/account-create/account-create.component.html
+++ b/src/app/account-create/account-create.component.html
@@ -1,73 +1,103 @@
 <h2 class="title" mat-dialog-title>SIGN UP FOR NEXUS</h2>
-<form [formGroup]="AccountCreateForm" (ngSubmit)="submit(AccountCreateForm)">
+<mat-radio-group [(ngModel)]="typeOfAccount" name="typeOfAccount">
+  <div>Please select a button (required):</div>
+  <mat-radio-button name="business" value="business" (change)="handleButton($event)">Business</mat-radio-button>
+  <mat-radio-button name="freelance" value="freelance" (change)="handleButton($event)">Freelancer</mat-radio-button>
+</mat-radio-group>
+<form [formGroup]="FreelancerCreateForm" *ngIf="typeOfAccount === 'freelance' " (ngSubmit)="submit(FreelancerCreateForm)">
   <mat-dialog-content class="mat-typography">
     <div class="signUpContainer">
-      <mat-radio-group [(ngModel)]="typeOfAccount" name="typeOfAccount" [ngModelOptions]="{standalone: true}">
-        <div>Please select a button (required):</div>
-        <mat-radio-button name="business" value="business" (change)="handleButton($event)">Business</mat-radio-button>
-        <mat-radio-button name="freelance" value="freelance" (change)="handleButton($event)">Freelancer</mat-radio-button>
-      </mat-radio-group>
-      <div *ngIf="typeOfAccount === 'freelance' ">
-        <mat-form-field>
-          <input matInput class="inputBox" placeholder="Username" formControlName="name">
+      <mat-form-field>
+        <input matInput class="inputBox" placeholder="Username" formControlName="username" [errorStateMatcher]="matcher"
+          required>
+          <mat-error *ngIf="fc().username.hasError('required')">Username is <strong>required</strong></mat-error>
+      </mat-form-field>
+      <mat-form-field>
+          <input matInput class="inputBox" placeholder="Full Name" formControlName="name" [errorStateMatcher]="matcher"
+            required>
+            <mat-error *ngIf="fc().name.hasError('required')">Full Name is <strong>required</strong></mat-error>
         </mat-form-field>
-        <mat-form-field>
-          <input matInput type="email" class="inputBox" placeholder="Email" formControlName="email">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="password" class="inputBox" placeholder="password" formControlName="password">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="picture" class="inputBox" placeholder="Profile Picture" formControlName="profilePicture">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="text" class="inputBox" placeholder="Phone #" formControlName="phoneNumber">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="text" class="inputBox" placeholder="Location" formControlName="location">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="text" class="inputBox" placeholder="LinkedIn" formControlName="linkdin">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="text" class="inputBox" placeholder="FaceBook" formControlName="faceBook">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="text" class="inputBox" placeholder="Instagram" formControlName="instagram">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="text" class="inputBox" placeholder="Twitter" formControlName="twitter">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="options" class="inputBox" placeholder="Skills" formControlName="skills">
-        </mat-form-field>
-        <mat-form-field>
-          <textarea matInput class="inputBox" placeholder="About You or Your Business" formControlName="about"></textarea>
-        </mat-form-field>
-      </div>
-      <div *ngIf="typeOfAccount === 'business' ">
-          <mat-form-field>
-            <input matInput class="inputBox" placeholder="name" formControlName="name">
-          </mat-form-field>
-          <mat-form-field>
-            <input matInput type="email" class="inputBox" placeholder="Email" formControlName="email">
-          </mat-form-field>
-          <mat-form-field>
-            <input matInput type="password" class="inputBox" placeholder="password" formControlName="password">
-          </mat-form-field>
-          <mat-form-field>
-            <input matInput type="text" class="inputBox" placeholder="Phone #" formControlName="phoneNumber">
-          </mat-form-field>
-          <mat-form-field>
-            <input matInput type="text" class="inputBox" placeholder="Location" formControlName="location">
-          </mat-form-field>
-          <mat-form-field>
-            <input matInput type="text" class="inputBox" placeholder="Website" formControlName="website">
-          </mat-form-field>
-          <mat-form-field>
-            <textarea matInput class="inputBox" placeholder="About You or Your Business" formControlName="about"></textarea>
-          </mat-form-field>
-        </div>
+      <mat-form-field>
+        <input matInput type="email" class="inputBox" placeholder="Email" formControlName="email" [errorStateMatcher]="matcher"
+          required>
+        <mat-hint>Must be valid email</mat-hint>
+        <mat-error *ngIf="fc().email.hasError('required') && !fc().email.hasError('email')">Email is <strong>required</strong></mat-error>
+        <mat-error *ngIf="fc().email.hasError('email') && !fc().email.hasError('required')" >Please enter a valid email address</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" class="inputBox" placeholder="Password" formControlName="password"
+          [errorStateMatcher]="matcher" required>
+        <mat-hint>Minimum of 6 characters</mat-hint>
+        <mat-error *ngIf="fc().password.hasError('required') && !fc().password.hasError('minlength')">Password is <strong>required</strong></mat-error>
+        <mat-error *ngIf="fc().password.hasError('minlength') && !fc().password.hasError('required')" >Minimum of 6 characters</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="picture" class="inputBox" placeholder="Profile Picture" formControlName="profilePicture">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Phone Number" formControlName="phoneNumber">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Location" formControlName="location">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="url" class="inputBox" placeholder="LinkedIn" formControlName="linkdin">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="url" class="inputBox" placeholder="FaceBook" formControlName="faceBook">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="url" class="inputBox" placeholder="Instagram" formControlName="instagram">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="url" class="inputBox" placeholder="Twitter" formControlName="twitter">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-select class="inputBox" placeholder="Skills" formControlName="skills" multiple>
+          <mat-option *ngFor="let skill of skills" [value]="skill">{{ skill }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <textarea matInput class="inputBox" placeholder="About You" formControlName="about" cdkTextareaAutosize></textarea>
+      </mat-form-field>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button class="buttons" mat-button type="button" mat-dialog-close>Cancel</button>
+    <button class="buttons" mat-button cdkFocusInitial type="submit">Sign Up</button>
+  </mat-dialog-actions>
+</form>
+<form [formGroup]="BusinessCreateForm" *ngIf="typeOfAccount === 'business' " (ngSubmit)="submit(BusniessCreateForm)">
+  <mat-dialog-content class="mat-typography">
+    <div class="signUpContainer">
+      <mat-form-field>
+        <input matInput class="inputBox" placeholder="Business Name" formControlName="name" [errorStateMatcher]="matcher" required>
+        <mat-error *ngIf="bc().name.hasError('required')">Business Name is <strong>required</strong></mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="email" class="inputBox" placeholder="Email" formControlName="email" [errorStateMatcher]="matcher" required>
+        <mat-hint>Must be valid email</mat-hint>
+        <mat-error *ngIf="bc().email.hasError('required') && !bc().email.hasError('email')">Email is <strong>required</strong></mat-error>
+        <mat-error *ngIf="bc().email.hasError('email') && !bc().email.hasError('required')" >Please enter a valid email address</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" class="inputBox" placeholder="Password" formControlName="password" [errorStateMatcher]="matcher" required>
+        <mat-hint>Minimum of 6 characters</mat-hint>
+        <mat-error *ngIf="bc().password.hasError('required') && !bc().password.hasError('minlength')">Password is <strong>required</strong></mat-error>
+        <mat-error *ngIf="bc().password.hasError('minlength') && !bc().password.hasError('required')" >Minimum of 6 characters</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Phone Number" formControlName="phoneNumber">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Location" formControlName="location">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Website" formControlName="website">
+      </mat-form-field>
+      <mat-form-field>
+        <textarea matInput class="inputBox" placeholder="About Your Business" formControlName="about" cdkTextareaAutosize></textarea>
+      </mat-form-field>
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
