--- a/src/app/busniess-profile/busniess-profile.component.html
+++ b/src/app/busniess-profile/busniess-profile.component.html
@@ -1,3 +1,7 @@
-<p>
-  busniess-profile works!
-</p>
+<app-navbar></app-navbar>
+<body>
+  <div class="bizHeader">
+    <div class="bizName">Biz Name Here</div>
+
+  </div>
+</body>
