--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,7 +2,7 @@
 
 <body>
   <div class="jumbotronBKG">
-    <h1 class="pageTitle">NEXUS CAREERS!</h1>
+    <h1 class="pageTitle">FIND A CAREER!</h1>
   </div>
   <br />
   <br />
@@ -15,9 +15,7 @@
       <mat-card-content> {{post.skills}} </mat-card-content>
       <mat-card-content> {{post.jobDescription}} </mat-card-content>
       <mat-card-actions>
-        <button mat-button>More Info</button>
-        <!-- <button mat-icon-button><img src="../../assets/telephone.svg"></button>
-        <button mat-icon-button><img src="../../assets/mail.svg"></button> -->
+        <button mat-button (click)="openForm()">More Info</button>
       </mat-card-actions>
     </mat-card>
   </div>
