--- a/src/app/account-update/account-update.component.html
+++ b/src/app/account-update/account-update.component.html
@@ -1,47 +1,97 @@
 <h2 class="title" mat-dialog-title>SIGN UP FOR NEXUS</h2>
-<form [formGroup]="AccountUpdateForm" (ngSubmit)="submit(AccountUpdateForm)">
+<mat-radio-group [(ngModel)]="typeOfAccount" name="typeOfAccount">
+  <div>Please select a button (required):</div>
+  <mat-radio-button name="business" value="business" (change)="handleButton($event)">Business</mat-radio-button>
+  <mat-radio-button name="freelance" value="freelance" (change)="handleButton($event)">Freelancer</mat-radio-button>
+</mat-radio-group>
+<form [formGroup]="FreelancerCreateForm" *ngIf="typeOfAccount === 'freelance' " (ngSubmit)="submit(FreelancerCreateForm)">
   <mat-dialog-content class="mat-typography">
     <div class="signUpContainer">
       <mat-form-field>
-        <input matInput class="inputBox" placeholder="Username" formControlName="name">
+        <input matInput class="inputBox" placeholder="Username" formControlName="username" [errorStateMatcher]="matcher"
+          required>
+        <mat-error *ngIf="fc().username.hasError('required')">Username is <strong>required</strong></mat-error>
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="email" class="inputBox" placeholder="Email" formControlName="email">
+        <input matInput class="inputBox" placeholder="Full Name" formControlName="name" [errorStateMatcher]="matcher"
+          required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="password" class="inputBox" placeholder="password" formControlName="password">
+        <input matInput type="email" class="inputBox" placeholder="Email" formControlName="email" [errorStateMatcher]="matcher"
+          required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" class="inputBox" placeholder="Password" formControlName="password"
+          [errorStateMatcher]="matcher" required>
       </mat-form-field>
       <mat-form-field>
         <input matInput type="picture" class="inputBox" placeholder="Profile Picture" formControlName="profilePicture">
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="text" class="inputBox" placeholder="Phone #" formControlName="phoneNumber">
+        <input matInput type="text" class="inputBox" placeholder="Phone Number" formControlName="phoneNumber">
       </mat-form-field>
       <mat-form-field>
         <input matInput type="text" class="inputBox" placeholder="Location" formControlName="location">
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="text" class="inputBox" placeholder="LinkedIn" formControlName="linkdin">
+        <input matInput type="url" class="inputBox" placeholder="LinkedIn" formControlName="linkdin">
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="text" class="inputBox" placeholder="FaceBook" formControlName="faceBook">
+        <input matInput type="url" class="inputBox" placeholder="FaceBook" formControlName="faceBook">
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="text" class="inputBox" placeholder="Instagram" formControlName="instagram">
+        <input matInput type="url" class="inputBox" placeholder="Instagram" formControlName="instagram">
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="text" class="inputBox" placeholder="Twitter" formControlName="twitter">
+        <input matInput type="url" class="inputBox" placeholder="Twitter" formControlName="twitter">
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="options" class="inputBox" placeholder="Skills" formControlName="skills">
+        <mat-select class="inputBox" placeholder="Skills" formControlName="skills" multiple>
+          <mat-option *ngFor="let skill of skills" [value]="skill">{{ skill }}</mat-option>
+        </mat-select>
       </mat-form-field>
       <mat-form-field>
-        <textarea matInput class="inputBox" placeholder="About You or Your Business" formControlName="about"></textarea>
+        <textarea matInput class="inputBox" placeholder="About You" formControlName="about" cdkTextareaAutosize></textarea>
       </mat-form-field>
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
     <button class="buttons" mat-button type="button" mat-dialog-close>Cancel</button>
-    <button class="buttons" mat-button cdkFocusInitial type="submit">Update</button>
+    <button class="buttons" mat-button cdkFocusInitial type="submit">Sign Up</button>
+  </mat-dialog-actions>
+</form>
+<form [formGroup]="BusinessCreateForm" *ngIf="typeOfAccount === 'business' " (ngSubmit)="submit(BusinessCreateForm)">
+  <mat-dialog-content class="mat-typography">
+    <div class="signUpContainer">
+      <mat-form-field>
+        <input matInput class="inputBox" placeholder="Username" formControlName="username" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput class="inputBox" placeholder="Business Name" formControlName="name" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="email" class="inputBox" placeholder="Email" formControlName="email" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" class="inputBox" placeholder="Password" formControlName="password" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Phone Number" formControlName="phoneNumber">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Location" formControlName="location">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" class="inputBox" placeholder="Website" formControlName="website">
+      </mat-form-field>
+      <mat-form-field>
+        <textarea matInput class="inputBox" placeholder="About Your Business" formControlName="about"
+          cdkTextareaAutosize></textarea>
+      </mat-form-field>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button class="buttons" mat-button type="button" mat-dialog-close>Cancel</button>
+    <button class="buttons" mat-button cdkFocusInitial type="submit">Sign Up</button>
   </mat-dialog-actions>
 </form>
